--- a/assets/styles/layouts/_jumbotron.scss
+++ b/assets/styles/layouts/_jumbotron.scss
@@ -1,3 +1,108 @@
+
+/* the jumbotron */
 .jumbotron {
+  border-radius: 0;
   border-bottom: $brand-primary solid 2px;
+  .description {
+    color: $brand-primary;
+    text-transform: capitalize;
+  }
+  .mission-statement {
+    color: $brand-primary;
+    padding: 20px 0 40px 0;
+    p {
+      font-size: 16px;
+    }
+  }
+}
+
+/* the services below jumbotron */
+.services {
+  list-style-type: none;
+  margin: 75px 0;
+  padding-left: 0;
+  li {
+    display: inline-block;
+    text-align: center;
+    width: 33%;
+    a {
+      text-decoration: none;
+      .label {
+        background-color: $highlight;
+        border-color: darken($highlight, 5%);
+        display: block;
+        font-size: 16px;
+        font-weight: 400;
+        padding: 1.2em 1.6em 1.3em;
+        text-transform: uppercase;
+        margin-left: 5%;
+        margin-right: 5%;
+        width: 90%;
+        &:hover, &:active, &:focus {
+          background-color: darken($highlight, 5%);
+          border-color: darken($highlight, 10%);
+        }
+        .fa {
+          font-size: 20px;
+          padding: 5px 20px 5px 5px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  /* the services below jumbotron */
+  .services {
+    li {
+      a {
+        .label {
+          font-size: 14px;
+        }
+        .fa {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  /* the services below jumbotron */
+  .services {
+    margin-top: 50px;
+    margin-bottom: 0;
+    li {
+      a {
+        .label {
+          font-size: 11px;
+          padding: 1.2em 1.1em 1.3em;
+        }
+        .fa {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+}
+
+
+@media (max-width: 767px) {
+  /* the services below jumbotron */
+  .services {
+    li {
+      display: block;
+      margin: 5%;
+      width: 90%;
+      a {
+        .label {
+          font-size: 11px;
+          padding: 1.2em 1.1em 1.3em;
+        }
+        .fa {
+          font-size: 15px;
+        }
+      }
+    }
+  }
 }
