--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -16,55 +16,6 @@ hr {
   .page-header:first-child {
     display: none;
   }
-  /* the jumbotron */
-  .jumbotron {
-    border-radius: 0;
-    .description {
-      color: $brand-primary;
-      text-transform: capitalize;
-    }
-    .mission-statement {
-      color: $brand-primary;
-      padding: 20px 0 40px 0;
-      p {
-        font-size: 16px;
-      }
-    }
-  }
-  /* the services */
-  .services {
-    list-style-type: none;
-    margin: 75px 0;
-    padding-left: 0;
-    li {
-      display: inline-block;
-      text-align: center;
-      width: 33%;
-      a {
-        text-decoration: none;
-        .label {
-          background-color: $highlight;
-          border-color: darken($highlight, 5%);
-          display: block;
-          font-size: 16px;
-          font-weight: 400;
-          padding: 1.2em 1.6em 1.3em;
-          text-transform: uppercase;
-          margin-left: 5%;
-          margin-right: 5%;
-          width: 90%;
-          &:hover, &:active, &:focus {
-            background-color: darken($highlight, 5%);
-            border-color: darken($highlight, 10%);
-          }
-          .fa {
-            font-size: 20px;
-            padding: 5px 20px 5px 5px;
-          }
-        }
-      }
-    }
-  }
 }
 
 /* all pages */
@@ -80,5 +31,27 @@ hr {
   h4 {
     margin-bottom: 25px;
     text-transform: uppercase;
+  }
+}
+
+@media (max-width: 991px){
+  .main {
+    h1, h2, h3, h4, h5, h6, p, ul, li, a, span {
+      text-align: center;
+    }
+    .office {
+      display: block;
+      float: none !important;
+      margin: auto;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main {
+    .office {
+      height: 400px;
+      width: 90%;
+    }
   }
 }
