--- a/assets/styles/layouts/_jumbotron.scss
+++ b/assets/styles/layouts/_jumbotron.scss
@@ -1,6 +1,6 @@
 
 /* the jumbotron */
-.jumbotron {
+.container .jumbotron {
   border-radius: 0;
   border-bottom: $brand-primary solid 2px;
   .description {
