--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -35,7 +35,7 @@ hr {
 }
 
 @media (max-width: 991px){
-  .main {
+  .main, .sidebar {
     h1, h2, h3, h4, h5, h6, p, ul, li, a, span {
       text-align: center;
     }
