--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -65,15 +65,65 @@
   .header-contact {
     a {
       display: inline-block;
-
-        width: 80%;
-
-      &:first-child {
-        width: 20%;
+      width: 48px;
+      .fa {
+        font-size: 18px;
+      }
+      .fa-map-marker {
+        position: relative;
+          left: 3px;
+      }
+      .phone, .map {
+        display: none;
       }
     }
   }
   .navbar-fixed-top {
+    height: 115px;
+    .brand {
+      font-size: 16px;
+      top: -40px;
+    }
+    ul {
+      bottom: 15px;
+      float: none;
+      margin: auto;
+      text-align: center;
+      width: 100%;
+    }
+  }
+}
 
+@media (max-width: 480px){
+  .header-contact {
+    .container {
+      padding-right: 0;
+    }
+  }
+  .navbar-fixed-top {
+    .brand {
+      font-size: 14px;
+    }
+  }
+}
+
+@media (max-width: 400px){
+  .header-contact {
+    .container {
+      padding-left: 0;
+    }
+  }
+  .navbar-fixed-top {
+    height: 105px;
+    .brand {
+      font-size: 11px;
+    }
+    ul {
+      li {
+        a {
+          font-size: 10px;
+        }
+      }
+    }
   }
 }
