--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -39,6 +39,16 @@
     width: 90px;
   }
 }
+// remove sidebar from blog
+.blog {
+  .main {
+    float: none;
+    width: 100%;
+  }
+  .sidebar {
+    display: none;
+  }
+}
 @media (min-width: 1200px) {
   .sidebar {
     .textwidget {
