--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -22,13 +22,13 @@
 }
 .navbar-fixed-top {
   background-color: $brand-primary;
-  height: 130px;
+  height: 100px;
 
   .brand {
     font-size: 20px;
     font-weight: 100;
     position: relative;
-      top: 22px;
+      top: 7px;
     text-transform: uppercase;
 
     &:hover, &:active, &:focus, &:visited {
@@ -38,7 +38,7 @@
   ul {
     float: right;
     position: relative;
-      bottom: 12px;
+      bottom: 26px;
     li {
       display: inline-block;
     }
@@ -73,19 +73,18 @@
         position: relative;
           left: 3px;
       }
-      .phone, .map {
+      .phone, .map-icon {
         display: none;
       }
     }
   }
   .navbar-fixed-top {
-    height: 115px;
     .brand {
       font-size: 16px;
       top: -40px;
     }
     ul {
-      bottom: 15px;
+      bottom: 22px;
       float: none;
       margin: auto;
       text-align: center;
@@ -114,7 +113,7 @@
     }
   }
   .navbar-fixed-top {
-    height: 105px;
+    height: 90px;
     .brand {
       font-size: 11px;
     }
