--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -34,6 +34,65 @@ hr {
   }
 }
 
+/* main page */
+.main {
+  .office-margin {
+    margin-top: 55px;
+  }
+  .contact-cta {
+    list-style-type: none;
+    margin: 75px auto;
+    padding-left: 0;
+    text-align: center;
+    li {
+      display: inline-block;
+      text-align: center;
+      width: 35%;
+      a {
+        text-decoration: none;
+        .label {
+          display: block;
+          font-size: 16px;
+          font-weight: 400;
+          padding: 1.2em 1.6em 1.3em;
+          text-transform: uppercase;
+          margin-left: 5%;
+          margin-right: 5%;
+          width: 90%;
+
+          &:first-child {
+            background-color: $highlight;
+            border-color: darken($highlight, 5%);
+            &:hover, &:active, &:focus {
+              background-color: darken($highlight, 5%);
+              border-color: darken($highlight, 10%);
+            }
+          }
+
+          &:last-child {
+            background-color: $brand-primary;
+            border-color: darken($brand-primary, 5%);
+            &:hover, &:active, &:focus {
+              //background-color: darken($highlight, 5%);
+              //border-color: darken($highlight, 10%);
+            }
+          }
+          .fa {
+            font-size: 20px;
+            padding: 5px 20px 5px 5px;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1200px) {
+  .main {
+    .office-margin {
+      margin-top: 40px;
+    }
+  }
+}
 @media (max-width: 991px){
   .main, .sidebar {
     h1, h2, h3, h4, h5, h6, p, ul, li, a, span {
@@ -46,6 +105,12 @@ hr {
       display: block;
       float: none !important;
       margin: auto;
+    }
+  }
+  .main {
+    .office-margin {
+      margin-top: 0px;
+      margin-bottom: 30px;
     }
   }
 }
