--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,7 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: $off-white;
   font-family: 'Lato', sans-serif;
-  padding-top: 130px;
+  padding-top: 100px;
 }
 .patients, .blog, .contact-us {
   .wrap {
@@ -35,19 +35,16 @@ body {
 .main {
   padding-left: 0;
   padding-right: 0;
+  p {
+    line-height: 30px;
+  }
 }
 .wrap {
   background-color: $white;
 }
 
-@media (max-width: 991px){
-  body {
-    padding-top: 115px;
-  }
-}
-
 @media (max-width: 400px){
   body {
-    padding-top: 105px;
+    padding-top: 90px;
   }
 }
