--- a/assets/styles/components/_map.scss
+++ b/assets/styles/components/_map.scss
@@ -1,42 +1,31 @@
-/* Home Page */
+/* Map */
 
-.home {
-  .map-header {
-    background-color: $highlight;
-    padding: 20px 0;
-    margin: 50px 0 0 0;
-    h5 {
-      color: $white;
-      text-align: center;
-    }
-  }
-  .map-pointer {
-    background-color: $highlight;
-    height: 30px;
-    position: relative;
-      bottom: 16px;
-    margin: auto;
-    transform: rotate(45deg);
-      -ms-transform: rotate(45deg); /* IE 9 */
-      -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
-    width: 30px;
-    z-index: 2;
-  }
-  .map {
-    position: relative;
-      bottom: 30px;
-    #map {
-      height: 250px;
-    }
+.map-header {
+  background-color: $highlight;
+  padding: 20px 0;
+  margin: 50px 0 0 0;
+  h4 {
+    color: $white !important;
+    text-align: center;
+    margin-bottom: 10px !important;
   }
 }
-
-/* Contact Page */
-.contact-us {
-  .map {
-    margin: 30px 0;
-    #map {
-      height: 250px;
-    }
+.map-pointer {
+  background-color: $highlight;
+  height: 30px;
+  position: relative;
+    bottom: 16px;
+  margin: auto;
+  transform: rotate(45deg);
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  width: 30px;
+  z-index: 2;
+}
+.map {
+  position: relative;
+    bottom: 30px;
+  #map {
+    height: 250px;
   }
 }
