--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "components/_wp-classes";
 @import "components/map";
 @import "components/doctors";
+@import "layouts/contact";
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
