--- a/assets/styles/layouts/_jumbotron.scss
+++ b/assets/styles/layouts/_jumbotron.scss
@@ -1,17 +1,23 @@
 
 /* the jumbotron */
 .container .jumbotron {
-  border-radius: 0;
   border-bottom: $brand-primary solid 2px;
-  .description {
-    color: $brand-primary;
-    text-transform: capitalize;
-  }
-  .mission-statement {
-    color: $brand-primary;
-    padding: 20px 0 40px 0;
-    p {
-      font-size: 16px;
+  border-radius: 0;
+  height: 400px;
+
+  .content {
+    position: relative;
+      top: 45px;
+    .description {
+      color: $brand-primary;
+      text-transform: capitalize;
+    }
+    .mission-statement {
+      color: $brand-primary;
+      padding: 20px 0 40px 0;
+      p {
+        font-size: 16px;
+      }
     }
   }
 }
@@ -28,8 +34,9 @@
     a {
       text-decoration: none;
       .label {
-        background-color: $highlight;
-        border-color: darken($highlight, 5%);
+        background-color: darken($highlight, 5%);
+        border-color: darken($highlight, 10%);
+        box-shadow: #48483C 2px 2px 2px;
         display: block;
         font-size: 16px;
         font-weight: 400;
@@ -39,8 +46,8 @@
         margin-right: 5%;
         width: 90%;
         &:hover, &:active, &:focus {
-          background-color: darken($highlight, 5%);
-          border-color: darken($highlight, 10%);
+          background-color: darken($highlight, 10%);
+          border-color: darken($highlight, 15%);
         }
         .fa {
           font-size: 20px;
