I ruined the last repo so this is the first commit

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,9 +6,11 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #cd784c;
+$brand-primary:         #DA875C;
 $brand-primary-shadow:  #a65c4a;
-$highlight:             #99987a;
+$highlight:             #5c7f92;
+// #4b5a62
+// these colors suck
 $off-white:             #ebdbd7;
 $white:                 #ffffff;
 $border:                solid 1px #FBF2EE;
