--- a/assets/styles/components/_ribbon.scss
+++ b/assets/styles/components/_ribbon.scss
@@ -1,7 +1,7 @@
 .ribbon-container {
-  position: absolute;
-  top: 0px;
-  right: -16px;
+  position: relative;
+  top: 0;
+  right: 1px;
   overflow: visible;
   /* so we can see the pseudo-elements we're going to add to the anchor */
 
@@ -94,8 +94,4 @@
 
   border-top: 29px solid darken($highlight, 5%);
   border-bottom: 29px solid darken($highlight, 5%);
-}
-
-.text-5 {
-  margin-top: 90px;
 }
