--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   border-left: $border;
   .textwidget {
-    text-align: center;
+    text-align: left;
       .btn-primary {
         width: 100%;
       }
@@ -49,45 +49,5 @@
     display: none;
   }
 }
-@media (min-width: 1200px) {
-  .sidebar {
-    .textwidget {
-      img {
-        height: 200px;
-        width: 350px;
-      }
-    }
-  }
-}
 
-@media (max-width: 1200px) {
-  .sidebar {
-    .textwidget {
-      img {
-        height: 140px;
-        width: 290px;
-      }
-    }
-  }
-}
 
-@media (max-width: 991px) {
-  .sidebar {
-    .textwidget {
-      img {
-        height: 200px;
-        width: 90%;
-      }
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .sidebar {
-    .textwidget {
-      img {
-
-      }
-    }
-  }
-}
