--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -11,6 +11,6 @@ $brand-primary-shadow:  #a65c4a;
 $highlight:             #5c7f92;
 // #4b5a62
 // these colors suck
-$off-white:             #ebdbd7;
+$off-white:             #F5F6F7;
 $white:                 #ffffff;
 $border:                solid 1px #FBF2EE;
