--- a/assets/styles/components/_ribbon.scss
+++ b/assets/styles/components/_ribbon.scss
@@ -1,7 +1,8 @@
 .ribbon-container {
   position: relative;
-  top: 0;
-  right: 1px;
+    top: 0;
+    right: 1px;
+  margin-bottom: 15px;
   overflow: visible;
   /* so we can see the pseudo-elements we're going to add to the anchor */
 
