--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,11 +26,11 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: $white;
+  background-color: $off-white;
   font-family: 'Lato', sans-serif;
   padding-top: 100px;
 }
-.patients, .blog, .contact-us {
+.patients, .blog, .single, .page-id-94, .contact-us {
   .wrap {
     padding-top: 20px;
   }
