--- a/assets/styles/components/_map.scss
+++ b/assets/styles/components/_map.scss
@@ -1,30 +1,37 @@
-/* Map */
+/* Home Map */
 
-.map-header {
-  background-color: $highlight;
-  padding: 20px 0;
-  margin: 50px 0 0 0;
-  h4 {
-    color: $white !important;
-    text-align: center;
-    margin-bottom: 10px !important;
+.home {
+  .map-header {
+    background-color: $highlight;
+    padding: 20px 0;
+    margin: 50px 0 0 0;
+    h4 {
+      color: $white !important;
+      text-align: center;
+      margin-bottom: 10px !important;
+    }
   }
-}
-.map-pointer {
-  background-color: $highlight;
-  height: 30px;
-  position: relative;
+  .map-pointer {
+    background-color: $highlight;
+    height: 30px;
+    position: relative;
     bottom: 16px;
-  margin: auto;
-  transform: rotate(45deg);
+    margin: auto;
+    transform: rotate(45deg);
     -ms-transform: rotate(45deg); /* IE 9 */
     -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
-  width: 30px;
-  z-index: 2;
+    width: 30px;
+    z-index: 2;
+  }
+  .map {
+    position: relative;
+    bottom: 30px;
+    #map {
+      height: 250px;
+    }
+  }
 }
 .map {
-  position: relative;
-    bottom: 30px;
   #map {
     height: 250px;
   }
