--- a/assets/styles/layouts/_contact.scss
+++ b/assets/styles/layouts/_contact.scss
@@ -5,9 +5,12 @@
     text-align: center;
    }
   .wpcf7 {
+    margin-top: 15px;
     text-align: left;
-    form {
-      .wpcf7-submit {}
+    .wpcf7-form {
+      .wpcf7-submit {
+        float: right;
+      }
     }
   }
 }
