--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -7,7 +7,7 @@
 /* all pages */
 .main, .sidebar {
   /* that font */
-  p {
+  p, ul, ol {
     color: $brand-primary-shadow;
   }
   /* them headers */
@@ -25,8 +25,10 @@ hr {
   border-top: $border;
 }
 .page-header {
-  border-bottom: none;
-  margin: 30px 0 0;
+  //border-bottom: none;
+  //margin: 30px 0 0;
+  border-bottom-color: lighten($brand-primary, 30%);
+  margin: 10px 0 20px;
 }
 .page-id-2 {
   /* the menu item */
