--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -51,6 +51,13 @@
     width: 90%;
   }
 }
+@media (max-width: 1200px){
+  .sidebar {
+    img {
+      width: 295px;
+    }
+  }
+}
 // remove sidebar from blog
 .blog {
   .main {
