--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -46,8 +46,13 @@ body {
   background-color: $white;
 }
 
-@media (max-width: 400px){
+@media (max-width: 991px){
   body {
     padding-top: 90px;
+  }
+}
+@media (max-width: 480px){
+  body {
+    padding-top: 80px;
   }
 }
