--- a/assets/styles/components/_ribbon.scss
+++ b/assets/styles/components/_ribbon.scss
@@ -42,7 +42,7 @@
     right: 3px;
 }
 
-.ribbon-container a {
+.ribbon-container span {
   display: block;
   padding: 20px;
   position: relative;
@@ -56,7 +56,7 @@
   text-decoration: none;
 }
 
-.ribbon-container a:after {
+.ribbon-container span:after {
   /* this creates the "folded" part of our ribbon */
 
   content: "";
@@ -70,7 +70,7 @@
   border-right: 15px solid transparent;
 }
 
-.ribbon-container a:before {
+.ribbon-container span:before {
   /* this creates the "forked" part of our ribbon */
 
   content: "";
@@ -86,17 +86,6 @@
   border-left: 29px solid transparent;
 }
 
-.ribbon-container a:hover {
-  background: darken($highlight, 5%);
-}
-
-.ribbon-container a:hover:before {
-  /* this makes sure that the "forked" part of the ribbon changes color with the anchor on :hover */
-
-  border-top: 29px solid darken($highlight, 5%);
-  border-bottom: 29px solid darken($highlight, 5%);
-}
-
 @media (max-width: 1200px) {
   .ribbon-container {
     width: 324px;
@@ -104,10 +93,17 @@
 }
 @media (max-width: 991px) {
   .ribbon-container {
-    right: 18px;
-    width: 767px;
+    width: 100%;
+
+    &:before {
+      border-bottom: none;
+    }
+
+    &:after {
+      background: transparent;
+    }
   }
-  .ribbon-container a:after {
+  .ribbon-container span:after {
     border-top: none;
   }
 }
