--- a/assets/styles/layouts/_jumbotron.scss
+++ b/assets/styles/layouts/_jumbotron.scss
@@ -1,12 +1,18 @@
 
 /* the jumbotron */
 .container .jumbotron {
-  //background-image: url('http://localhost:8888/gardencityprimary/wp-content/uploads/2015/11/happy-family.jpg');
+  //background-image: url('http://localhost:8888/gardencityprimary/wp-content/uploads/2015/11/Office-Placeholder.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   border-bottom: $brand-primary solid 2px;
   border-radius: 0;
   height: 400px;
 
   .content {
+    //background-color: rgba(255,255,255,0.8);
+    //border-radius: 3px;
+    //padding: 10px;
     position: relative;
       top: 45px;
     .description {
@@ -19,6 +25,9 @@
       p {
         font-size: 16px;
       }
+    }
+    a {
+      color: $white !important;
     }
   }
 }
