--- a/assets/styles/layouts/_jumbotron.scss
+++ b/assets/styles/layouts/_jumbotron.scss
@@ -1,36 +1,74 @@
 
 /* the jumbotron */
-.container .jumbotron {
-  //background-image: url('http://localhost:8888/gardencityprimary/wp-content/uploads/2015/11/Office-Placeholder.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  border-bottom: $brand-primary solid 2px;
-  border-radius: 0;
-  height: 400px;
+//.container .jumbotron {
+//  background-image: url('http://localhost:8888/gardencityprimary/wp-content/uploads/2016/01/OfficeInternal2.jpg');
+//  background-repeat: no-repeat;
+//  background-position: center -85px;
+//  background-size: cover;
+//  border-bottom: $brand-primary solid 2px;
+//  border-radius: 0;
+//  height: 400px;
+//
+//  .content {
+//    background-color: rgba(0, 0, 0, 0.5);
+//    border-radius: 3px;
+//    padding: 20px;
+//    position: relative;
+//    top: 20px;
+//    width: 520px;
+//    .description {
+//      color: $white;
+//      text-transform: capitalize;
+//    }
+//    .mission-statement {
+//      padding: 20px 0 40px 0;
+//      p {
+//        color: $white;
+//        font-size: 16px;
+//      }
+//    }
+//    a {
+//      color: $white !important;
+//    }
+//  }
+//}
 
-  .content {
-    //background-color: rgba(255,255,255,0.8);
-    //border-radius: 3px;
-    //padding: 10px;
-    position: relative;
-      top: 45px;
-    .description {
-      color: $brand-primary-shadow;
-      text-transform: capitalize;
-    }
-    .mission-statement {
-      color: $brand-primary-shadow;
-      padding: 20px 0 40px 0;
-      p {
-        font-size: 16px;
-      }
-    }
-    a {
-      color: $white !important;
-    }
-  }
+/* carousel */
+
+.carousel-inner {
+  height: 450px;
 }
+
+.carousel-inner>.item>a>img, .carousel-inner>.item>img {
+  width: 100%;
+}
+
+.carousel-control .fa-chevron-left,
+.carousel-control .fa-chevron-right,
+.carousel-control .icon-next,
+.carousel-control .icon-prev {
+  position: absolute;
+  top: 50%;
+  margin-top: -10px;
+  z-index: 5;
+  display: inline-block;
+}
+
+.carousel-control .fa-chevron-left,
+.carousel-control .icon-prev {
+  left: 50%;
+  margin-left: -10px;
+}
+
+.carousel-caption {
+  background: rgba(255,255,255,0.5);
+  width: 100%;
+  top: 335px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 
 /* the services below jumbotron */
 .services {
@@ -103,6 +141,30 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .carousel-control .fa-chevron-left,
+  .carousel-control .icon-prev {
+    margin-left: -15px;
+  }
+  .carousel-control .fa-chevron-left,
+  .carousel-control .fa-chevron-right,
+  .carousel-control .icon-next,
+  .carousel-control .icon-prev {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+    font-size: 30px;
+  }
+  .carousel-control .fa-chevron-left,
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-next,
+  .carousel-control .icon-prev {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+    font-size: 30px;
+  }
+}
 
 @media (max-width: 767px) {
   /* the services below jumbotron */
