--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -13,14 +13,22 @@
       background-color: $white;
     }
     p,a  {
-      color: $brand-primary-shadow;
+      color: $highlight;
       text-transform: uppercase;
 
       .privacy {
-        color: $brand-primary-shadow;
+        color: $highlight;
       }
     }
     .questions {
       font-size: 10px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .content-info {
+      p, a {
+        font-size: 10px;
+      }
     }
   }
