--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,11 +6,11 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #DA875C;
-$brand-primary-shadow:  #a65c4a;
-$highlight:             #5c7f92;
+$brand-primary:         #7587B1;
+$brand-primary-shadow:  #3B496B;
+$highlight:             #4C4E7B;
 // #4b5a62
 // these colors suck
-$off-white:             #F5F6F7;
+$off-white:             #F3F0EE;
 $white:                 #ffffff;
 $border:                solid 1px #FBF2EE;
