--- a/assets/styles/components/_doctors.scss
+++ b/assets/styles/components/_doctors.scss
@@ -1,5 +1,13 @@
 /**************** Single Doctor Page Only ****************/
 .single {
+  .physician-bg {
+    background: url("/gardencityprimary/wp-content/uploads/2016/01/Physician-BG.jpg") no-repeat;
+    background-size: cover;
+    border-radius: 3px;
+    opacity: 0.8;
+    padding: 15px;
+
+  }
   .entry-title {
     border-bottom: none;
     margin-top: 20px;
@@ -15,8 +23,8 @@
   }
   .single-image {
     border-radius: 3px;
-    height: 300px;
-    width: 300px;
+    height: 370px;
+    width: 350px;
   }
   .physician-information {
     .header {
@@ -26,6 +34,9 @@
       font-size: 16px;
       padding: 5px 10px;
       width: 100%;
+    }
+    .content {
+      margin-bottom: 30px;
     }
     p {
       color: $highlight;
@@ -126,6 +137,9 @@
           margin: auto;
         }
       }
+      .office-hours {
+        display: none;
+      }
     }
   }
 }
@@ -136,8 +150,20 @@
       .entry-title {
         .specialty {
           font-size: 6px;
-          top: 6px;
+          top: 4px;
         }
+      }
+    }
+  }
+  .single {
+    .single-image {
+      height: 320px;
+      width: 300px;
+    }
+    .single-office-hours {
+      p {
+        float: left;
+        width: 100%;
       }
     }
   }
