--- a/assets/styles/components/_map.scss
+++ b/assets/styles/components/_map.scss
@@ -24,6 +24,7 @@
     z-index: 2;
   }
   .map {
+    pointer-events: none;
     position: relative;
     bottom: 30px;
     #map {
@@ -42,6 +43,9 @@
     #map {
       height: 300px;
     }
+  }
+  .contact-us .map {
+    display: none;
   }
 }
 
