--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -8,15 +8,18 @@
 .main, .sidebar {
   /* that font */
   p, ul, ol {
-    color: $brand-primary-shadow;
+    color: darken($highlight, 30%);
   }
   /* them headers */
   h1, h2, h3, h4, h5, h6 {
-    color: $brand-primary-shadow;
+    color: darken($highlight, 20%);
   }
-  h4 {
+  h3 {
     margin-bottom: 25px;
     text-transform: uppercase;
+  }
+  a {
+    color: $highlight;
   }
 }
 
@@ -25,15 +28,13 @@ hr {
   border-top: $border;
 }
 .page-header {
-  //border-bottom: none;
-  //margin: 30px 0 0;
-  border-bottom-color: lighten($brand-primary, 30%);
+  border-bottom-color: #DEE8EC;
   margin: 10px 0 20px;
 }
 .page-id-2 {
   /* the menu item */
   #menu-item-4 > a {
-    background-color: #B96B43;
+    background-color: $brand-primary-shadow;
     border-radius: 3px;
     text-decoration: none;
   }
@@ -77,7 +78,7 @@ hr {
           background-color: darken($highlight, 5%);
           border-color: darken($highlight, 10%);
 
-          &:hover, &:active, &:focus, &:visited, {
+          &:hover, &:active, &:focus, &:visited {
             background-color: darken($highlight, 10%);
             border-color: darken($highlight, 15%);
           }
@@ -87,7 +88,7 @@ hr {
           background-color: darken($brand-primary, 5%);
           border-color: darken($brand-primary, 10%);
 
-          &:hover, &:active, &:focus, &:visited, {
+          &:hover, &:active, &:focus, &:visited {
             background-color: darken($brand-primary, 10%);
             border-color: darken($brand-primary, 15%);
           }
