--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -29,6 +29,12 @@ hr {
 }
 .page-header {
   border-bottom-color: #DEE8EC;
+  margin: 30px 0 20px;
+  h3 {
+    margin-bottom: 0;
+  }
+}
+.page-header:first-child {
   margin: 10px 0 20px;
 }
 .page-id-2 {
