--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,10 +6,10 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #7587B1;
-$brand-primary-shadow:  #3B496B;
-$highlight:             #4C4E7B;
-// #4b5a62
+$brand-primary:         #2D679A;
+$brand-primary-shadow:  #033765;
+$highlight:             #214F70;
+
 // these colors suck
 $off-white:             #F3F0EE;
 $white:                 #ffffff;
