--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -45,9 +45,9 @@ hr {
     text-decoration: none;
   }
   /* the page header */
-  .page-header:first-child {
-    display: none;
-  }
+  //.page-header:first-child {
+  //  display: none;
+  //}
 }
 .main {
   .office-margin {
