--- a/assets/styles/components/_doctors.scss
+++ b/assets/styles/components/_doctors.scss
@@ -1,7 +1,7 @@
 /**************** Single Doctor Page Only ****************/
 .single {
   .physician-bg {
-    background: url("/gardencityprimary/wp-content/uploads/2016/01/Physician-BG.jpg") no-repeat;
+    background: url("/../wp-content/uploads/sites/2/2016/02/Physician-BG.jpg") no-repeat;
     background-size: cover;
     border-radius: 3px;
     opacity: 0.8;
@@ -58,14 +58,10 @@
 
 .blog {
   .single-profile {
-    .col-sm-5, .col-sm-7 {
-      padding-left: 0;
-      padding-right: 0;
-    }
     .entry-title {
       background-color: $off-white;
       padding: 15px;
-      text-align: left;
+      text-align: center;
       text-transform: uppercase;
       a {
         color: $highlight;
@@ -73,16 +69,16 @@
       }
       .specialty {
         color: $highlight;
-        float: right;
-        font-size: 12px;
+        font-size: 11px;
+        margin-bottom: 0;
       }
     }
     .doctor-portrait {
       img {
         display: block;
-        height: 200px;
-        width: 200px;
-        margin-bottom: 15px;
+        height: 275px;
+        width: 275px;
+        margin: 15px auto;
       }
     }
     .office-hours {
@@ -109,7 +105,6 @@
     .single-profile {
       .entry-title {
         .specialty {
-          font-size: 10px;
           position: relative;
             top: 2px;
         }
@@ -134,7 +129,9 @@
     .single-profile {
       .doctor-portrait {
         img {
+          height: 225px;
           margin: auto;
+          width: 225px;
         }
       }
       .office-hours {
@@ -149,7 +146,6 @@
     .single-profile {
       .entry-title {
         .specialty {
-          font-size: 6px;
           top: 4px;
         }
       }
