--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:          https://gardencityprimarymedicalcare.com
 Description:        A Garden City Primary Medical Theme
 Version:            1.0
 Author:             Winthrop Web
-Author URI:         https://roots.io/
+Author URI:         https://www.winthrop.org/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
