--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -32,6 +32,7 @@ hr {
   margin: 30px 0 20px;
   h3 {
     margin-bottom: 0;
+    margin-top: 0;
   }
 }
 .page-header:first-child {
@@ -44,10 +45,6 @@ hr {
     border-radius: 3px;
     text-decoration: none;
   }
-  /* the page header */
-  //.page-header:first-child {
-  //  display: none;
-  //}
 }
 .main {
   .office-margin {
