--- a/assets/styles/components/_ribbon.scss
+++ b/assets/styles/components/_ribbon.scss
@@ -3,6 +3,7 @@
     top: 0;
     right: 1px;
   margin-bottom: 15px;
+  margin-top: 20px;
   overflow: visible;
   /* so we can see the pseudo-elements we're going to add to the anchor */
 
