--- a/assets/styles/components/_doctors.scss
+++ b/assets/styles/components/_doctors.scss
@@ -1,5 +1,9 @@
 /**************** Single Doctor Page Only ****************/
 .single {
+  .entry-content {
+    background: $white;
+    padding: 15px;
+  }
   .physician-bg {
     background: url("/../wp-content/uploads/sites/2/2016/02/Physician-BG.jpg") no-repeat;
     background-size: cover;
@@ -58,6 +62,8 @@
 
 .blog {
   .single-profile {
+    padding-left: 0;
+    padding-right: 0;
     .entry-title {
       background-color: $off-white;
       padding: 15px;
@@ -72,6 +78,10 @@
         font-size: 11px;
         margin-bottom: 0;
       }
+
+    }
+    .card {
+      margin: 15px;
     }
     .doctor-portrait {
       img {
