--- a/assets/styles/layouts/_insurances.scss
+++ b/assets/styles/layouts/_insurances.scss
@@ -4,7 +4,8 @@
     background-image: url("../../assets/images/insurances.png");
     display: inline-block;
     margin-bottom: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
     height: 50px;
     width: 130px;
   }
