--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,9 +6,9 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #2D679A;
-$brand-primary-shadow:  #033765;
-$highlight:             #214F70;
+$brand-primary:         #3B6D98;
+$brand-primary-shadow:  #134877;
+$highlight:             #D08863;
 
 // these colors suck
 $off-white:             #F3F0EE;
