--- a/assets/styles/components/_ribbon.scss
+++ b/assets/styles/components/_ribbon.scss
@@ -91,6 +91,7 @@
 }
 @media (max-width: 991px) {
   .ribbon-container {
+    padding-top: 20px;
     width: 100%;
     span {
       margin-left: 0;
